--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,16 @@
 {
 	"name":              "dreamfactory/app-admin",
-	"description":       "DreamFactory Services Platform(tm) Core Web Library",
+	"description":       "DreamFactory Services Platform(tm) Administration Application",
+	"authors":           [
+		{
+			"name":  "Jason Sykes",
+			"email": "jasonsykes@dreamfactory.com",
+			"role":  "Lead Engineer, Client"
+		}
+	],
 	"version":           "1.0.0-RC1",
-	"type":              "library",
-	"keywords":          ["dreamfactory", "dsp", "cloud", "admin", "app"],
+	"type":              "composer-installer",
+	"keywords":          ["dreamfactory", "dsp", "cloud", "dsp-admin", "dsp-app", "dsp-lib", "dsp-fuelcell"],
 	"homepage":          "http://dreamfactorybeta.com/",
 	"license":           ["GPL-3.0", "proprietary"],
 	"support":           {
@@ -13,12 +20,8 @@
 		"wiki":   "https://bitbucket.org/dreamfactory/app-admin/wiki",
 		"source": "https://bitbucket.org/dreamfactory/app-admin/src"
 	},
-	"authors":           [
-		{
-			"name":  "Jason Sykes",
-			"email": "jasonsykes@dreamfactory.com",
-			"role":  "Lead Engineer, Client"
-		}
-	],
-	"minimum-stability": "dev"
+	"minimum-stability": "dev",
+	"require":           {
+		"dreamfactory/lib-platform-installer": "v1.0.0-RC1"
+	}
 }
