--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,15 @@
 {
 	"name":              "dreamfactory/app-admin",
 	"description":       "DreamFactory Services Platform(tm) Administration Application",
+	"keywords":          ["dreamfactory", "dsp", "cloud", "dsp-admin", "dsp-app", "dsp-lib", "dsp-fuelcell"],
+	"type":              "dreamfactory-platform",
 	"authors":           [
 		{
-			"name":  "Jason Sykes",
+			"name":  "Sykes, Jason",
 			"email": "jasonsykes@dreamfactory.com",
-			"role":  "Lead Engineer, Client"
+			"role":  "Lead Engineer, client-side"
 		}
 	],
-	"version":           "1.0.0-RC1",
-	"type":              "dreamfactory-platform",
-	"keywords":          ["dreamfactory", "dsp", "cloud", "dsp-admin", "dsp-app", "dsp-lib", "dsp-fuelcell"],
 	"homepage":          "http://dreamfactorybeta.com/",
 	"license":           ["GPL-3.0", "proprietary"],
 	"support":           {
@@ -22,6 +21,6 @@
 	},
 	"minimum-stability": "dev",
 	"require":           {
-		"dreamfactory/lib-platform-installer": "v1.0.0-RC1"
+		"dreamfactory/lib-platform-installer": "dev-master"
 	}
 }
