--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,38 @@
 {
-	"name":              "dreamfactory/app-launchpad",
-	"description":       "DreamFactory Services Platform(tm) LaunchPad Application",
-	"keywords":          ["dreamfactory", "dsp", "cloud", "dsp-launchpad", "dsp-app", "dsp-core"],
+	"name":              "dreamfactory/app-admin",
+	"description":       "DreamFactory Services Platform(tm) Admin Application",
+	"keywords":          ["dreamfactory", "dsp", "cloud", "dsp-admin", "dsp-app", "dsp-core"],
 	"type":              "dreamfactory-platform",
 	"authors":           [
 		{
 			"name":  "Sykes, Jason",
 			"email": "jasonsykes@dreamfactory.com",
 			"role":  "Lead Engineer, client-side"
+		},
+		{
+			"name":  "Hicks, Lee",
+			"email": "leehicks@dreamfactory.com",
+			"role":  "Lead Engineer, server-side"
+		},
+		{
+			"name":  "Appleton, Todd",
+			"email": "toddappleton@dreamfactory.com",
+			"role":  "Lead Engineer, client-side; UX/QA"
+		},
+		{
+			"name":  "Ablan, Jerry",
+			"email": "jerryablan@dreamfactory.com",
+			"role":  "Black Ops"
 		}
 	],
 	"homepage":          "http://dreamfactorybeta.com/",
 	"license":           ["GPL-3.0", "proprietary"],
 	"support":           {
 		"email":  "developer-support@dreamfactory.com",
-		"issues": "https://bitbucket.org/dreamfactory/app-launchpad/issues",
-		"forum":  "https://bitbucket.org/dreamfactory/app-launchpad/forum",
-		"wiki":   "https://bitbucket.org/dreamfactory/app-launchpad/wiki",
-		"source": "https://bitbucket.org/dreamfactory/app-launchpad/src"
+		"issues": "https://bitbucket.org/dreamfactory/app-admin/issues",
+		"forum":  "https://bitbucket.org/dreamfactory/app-admin/forum",
+		"wiki":   "https://bitbucket.org/dreamfactory/app-admin/wiki",
+		"source": "https://bitbucket.org/dreamfactory/app-admin/src"
 	},
 	"minimum-stability": "dev",
 	"require":           {
