--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"name":              "dreamfactory/app-admin",
-	"version":           "1.0.4",
+	"version":           "1.0.5",
+	"homepage":          "http://dreamfactorysoftware.github.io",
 	"description":       "DreamFactory Services Platform(tm) Admin Application",
 	"keywords":          ["dreamfactory", "dsp", "cloud", "dsp-admin", "dsp-app", "dsp-core"],
 	"type":              "dreamfactory-platform",
@@ -26,7 +27,6 @@
 			"role":  "Black Ops"
 		}
 	],
-	"homepage":          "http://dreamfactory.com/",
 	"license":           ["Apache2.0"],
 	"support":           {
 		"email":  "support@dreamfactory.com",
